--- a/src/components/Text/Text.module.css
+++ b/src/components/Text/Text.module.css
@@ -46,7 +46,7 @@
   color: var(--eds-theme-color-text-neutral-strong);
 }
 .text--brand {
-  color: var(--eds-theme-color-text-brand-primary);
+  color: var(--eds-theme-color-text-brand-default);
 }
 /* stylelint-disable-next-line eds/no-tier-1-color-variable */
 .text--info {
